discussion/kv_engine/128644/128644_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39042: Add PrometheusStatCollector

Adds a new StatCollector implementation which gathers added stats to be
handed off to prometheus-cpp for exposition.

Change-Id: I48aeaf7ff24366a6ef9bccf9fd355bf5f9704df8

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-05-27 15:06:42.000000000
Message: 
Uploaded patch set 7: Patch Set 6 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-27 15:09:42.000000000
Message: 
Patch Set 7: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2443/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/prometheus_collector.h:22:10: error: "prometheus/client_metric.h" file not found [clang-diagnostic-error]
#include <prometheus/client_metric.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:174:34: error: use of undeclared identifier "num_ops" [clang-diagnostic-error]
STAT(ep_num_ops_get_meta, count, num_ops, {{"op", "get_meta"}})
                                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2443/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/prometheus_collector.h:22:10:
error: "prometheus/client_metric.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2443/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/960/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/include/statistics/prometheus_collector.h b/include/statistics/prometheus_collector.h
index 138546e..d3212b3 100644
--- a/include/statistics/prometheus_collector.h
+++ b/include/statistics/prometheus_collector.h
@@ -24,7 +24,8 @@
 
 class PrometheusStatCollector : public StatCollector {
 public:
-    PrometheusStatCollector(std::string prefix = &quot;kv_&quot;): prefix(std::move(prefix)) {
+    PrometheusStatCollector(std::string prefix = &quot;kv_&quot;)
+        : prefix(std::move(prefix)) {
     }
 
     // Allow usage of the &quot;helper&quot; methods defined in the base type.

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/960/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24281/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/include/statistics/stats.def.h:174:34:
error: use of undeclared identifier "num_ops"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24281/ )
----------------------------------------------------------------------------------------------------------------------
